<resources>
    <string name="app_name">Zekri</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="read">Read</string>
    <string name="settings">Settings</string>
    <string name="prayers">Prayers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dump_one">1</string>
    <string name="zekeName">Zekr Name</string>
    <string name="zekeDate">23–11–2022 </string>
    <string name="zekr_name">Zekr Name</string>
    <string name="zekr_target">Zekr Target</string>
</resources>