<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_read"
        android:icon="@drawable/read_selector"
        android:title="@string/read" />
    <item
        android:id="@+id/menu_mosque"
        android:icon="@drawable/mosque_selector"
        android:title="@string/prayers" />
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/home_selector"
        android:title="@string/home" />
    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/favorite_selector"
        android:title="@string/add" />
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/settings_selector"
        android:title="@string/settings" />
</menu>